--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "leemind/cordova-plugin-push",
+  "name": "@leemind/cordova-plugin-push",
   "version": "4.0.0-dev.0",
   "description": "Register and receive push notifications.",
   "scripts": {
@@ -57,7 +57,7 @@
   },
   "types": "./types/index.d.ts",
   "cordova": {
-    "id": "leemind/cordova-plugin-push",
+    "id": "@leemind/cordova-plugin-push",
     "platforms": [
       "ios",
       "android",
